workspace-sf/force-app/main/default/objects/Corretores_do_Cupom_do_Canal__c/Corretores_do_Cupom_do_Canal__c.object-meta.xml
<CustomObject>
    <label>Corretores do Cupom do Canal</label>
    <nameField>
        <label>SUSEP</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Corretores do Cupom do Canal</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>