workspace-sf/force-app/main/default/objects/Corretores_do_Cupom_do_Canal__c/fields/Apolice__c.field-meta.xml
<CustomField>
    <fullName>Apolice__c</fullName>
    <label>Apólice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>