workspace-sf/force-app/main/default/objects/Corretores_do_Cupom_do_Canal__c/fields/Cupom__c.field-meta.xml
<CustomField>
    <fullName>Cupom__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cupom</label>
    <referenceTo>Cupom__c</referenceTo>
    <relationshipLabel>Corretores do Cupom do Canal</relationshipLabel>
    <relationshipName>Corretores_do_Cupom_do_Canal</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>