workspace-sf/force-app/main/default/objects/Corretores_do_Cupom_do_Canal__c/fields/Vezes_utilizado__c.field-meta.xml
<CustomField>
    <fullName>Vezes_utilizado__c</fullName>
    <label>Quantas vezes o cupom foi utilizado</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>